--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
 </head>
 
 <body>
-<script src="js/interactiveName.js"></script>
     <!--Drop Down Menu-->
+
+    <div class="header">
+	    <div class="headerImage">
+        <img src="images/Epcot_Page_Banner.jpg">
+    </div>
+	</div>
+	<div class="bodySection">
+        <p id="title">About This Website</p>
+        <hr align="center" width="75%">
+        <script src="js/getName.js"></script>
+
+        <p id="content">You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</p>
+    </div>
     <div id='cssmenu'>
         <ul>
             <li><a href="index.html"><span>Home</span></a>
@@ -23,18 +35,45 @@
                     </li>
                 </ul>
             </li>
+            <li class='active has-sub'><a href='#'>School Courses2</span></a>
+                <ul>
+                    <li class='has-sub'><a href='history.html'><span>Political Gov.3</span></a>
+
+                    </li>
+                    <li class='has-sub'><a href='#'><span>Course 4</span></a>
+                    </li>
+                </ul>
+            </li>
+            <li class='active has-sub'><a href='#'>School Courses3</span></a>
+                <ul>
+                    <li class='has-sub'><a href='history.html'><span>Political Gov5</span></a>
+
+                    </li>
+                    <li class='has-sub'><a href='#'><span>Course 6</span></a>
+                    </li>
+                </ul>
+            </li>
+            <li class='active has-sub'><a href='#'>School Courses4</span></a>
+                <ul>
+                    <li class='has-sub'><a href='history.html'><span>Political Gov.7</span></a>
+
+                    </li>
+                    <li class='has-sub'><a href='#'><span>Course 8</span></a>
+                    </li>
+                </ul>
+            </li>
+            <li class='active has-sub'><a href='#'>School Courses5</span></a>
+                <ul>
+                    <li class='has-sub'><a href='history.html'><span>Political Gov.9</span></a>
+
+                    </li>
+                    <li class='has-sub'><a href='#'><span>Course 10</span></a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </div>
-    <div class="header">
-    </div>
-        <div class="bodySection">
-            <p id="title">About This Website</p>
-            <hr align="center" width="75%">
-            <script src="js/getName.js"></script>
-
-            <p id="content">You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</p>
-	</div>
-	<!--<button id="contactToggle" class="contactButton">Contact Me</button>
+    <!--<button id="contactToggle" class="contactButton">Contact Me</button>
 	    <div class="contact">
         <form action="" method="POST" enctype="multipart/form-data">
             <input name="action" value="submit" type="hidden">
