Drop down improvements
Drop down improvements

--- a/books1.html
+++ b/books1.html
@@ -11,11 +11,11 @@
     <!--Drop Down Menu-->
 
     <div class="header">
-	    <div class="headerImage">
+	    <div id="headerImage">
         <img src="images/Epcot_Page_Banner.jpg">
     </div>
 	</div>
-	    <div id='cssmenu'>
+    <div id='cssmenu'>
         <ul>
             <li><a href="index.html"><span>Home</span></a>
             </li>
@@ -24,11 +24,11 @@
                     <li class='has-sub'><a href='history.html'><span>Political Gov.</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 2</span></a>
+                    <li class='has-sub'><a href='#'><span>Web Design</span></a>
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses2</span></a>
+            <li class='active has-sub'><a href='#'>School Courses 2</span></a>
                 <ul>
                     <li class='has-sub'><a href='history.html'><span>Political Gov.3</span></a>
 
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses3</span></a>
+            <li class='active has-sub'><a href='#'>Music</span></a>
                 <ul>
                     <li class='has-sub'><a href='history.html'><span>Political Gov5</span></a>
 
@@ -46,7 +46,7 @@
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses4</span></a>
+            <li class='active has-sub'><a href='#'>Movies</span></a>
                 <ul>
                     <li class='has-sub'><a href='history.html'><span>Political Gov.7</span></a>
 
@@ -55,7 +55,7 @@
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses5</span></a>
+            <li class='active has-sub'><a href='#'>Books</span></a>
                 <ul>
                     <li class='has-sub'><a href='history.html'><span>Political Gov.9</span></a>
 
@@ -66,14 +66,38 @@
             </li>
         </ul>
     </div>
-        <div class="bodySection">
-            <p id="title">Political Government and Philosophy Class</p>
-            <hr align="center" width="75%">
-            <script src="js/getName.js"></script>
+		<div class="bodySection">
+        <p id="title">Web Design Projects</p>
+        <script src="js/getName.js"></script>
 
-    <div class="lockSlide">
-        <p id="content">Here is a group presentation that me and group members made while in the class in 12th grade.</p>
-        <iframe src="https://docs.google.com/presentation/d/1pQrDDHbdubRN8jdCiGbOdDT8REptwKfEEc0Qi1RO5qs/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <p id="content">Some projects</p>
     </div>
+    <!--<button id="contactToggle" class="contactButton">Contact Me</button>
+	    <div class="contact">
+        <form action="" method="POST" enctype="multipart/form-data">
+            <input name="action" value="submit" type="hidden">
+            <h1 align="center">Contact Me:</h1>
+            <br>
+            <p>Your name:</p>
+            <input name="name" size="30" type="text">
+            <br>
+            <br>
+            <p>Your email:</p>
+            <input name="email" size="30" type="text">
+            <br>
+            <br>
+            <p>Your message:</p>
+            <textarea name="message" rows="7" cols="30">
+            </textarea>
+            <br>
+            <br>
+            <input value="Send email" type="submit">
+        </form>
+    </div>-->
+    <div class="footer">
     </div>
+    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/pageLoadAnim.js"></script>
+</body>
 
+</html>
