--- a/school1.html
+++ b/school1.html
@@ -21,60 +21,74 @@
             </li>
             <li class='active has-sub'><a href='#'>School Courses</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.</span></a>
+                    <li class='has-sub'><a href='school1.html'><span>Web Design</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 2</span></a>
+                    <li class='has-sub'><a href='school2.html'><span>Political Gov</span></a>
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses2</span></a>
+            <li class='active has-sub'><a href='#'>School Courses 2</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.3</span></a>
+                    <li class='has-sub'><a href='school3.html'><span>Course 3</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 4</span></a>
+                    <li class='has-sub'><a href='school4'><span>Course 4</span></a>
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses3</span></a>
+            <li class='active has-sub'><a href='#'>Music</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov5</span></a>
+                    <li class='has-sub'><a href='music1.html'><span>Music 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 6</span></a>
+                    <li class='has-sub'><a href='music2.html'><span>Music 2</span></a>
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses4</span></a>
+            <li class='active has-sub'><a href='#'>Movies</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.7</span></a>
+                    <li class='has-sub'><a href='movies1.html'><span>Movies 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 8</span></a>
+                    <li class='has-sub'><a href='movies1.html'><span>Movies 2</span></a>
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses5</span></a>
+            <li class='active has-sub'><a href='#'>Books</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.9</span></a>
+                    <li class='has-sub'><a href='books1.html'><span>Books 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 10</span></a>
+                    <li class='has-sub'><a href='books2.html'><span>Books 2</span></a>
+                    </li>
+                </ul>
+            </li>
+			<li class='active has-sub'><a href='#'>Television Shows</span></a>
+                <ul>
+                    <li class='has-sub'><a href='tv1.html'><span>Television Show 1</span></a>
+
+                    </li>
+                    <li class='has-sub'><a href='tv2.html'><span>Television Show 2</span></a>
+                    </li>
+                </ul>
+            </li>
+			<li class='active has-sub'><a href='#'>All Games</span></a>
+                <ul>
+                    <li class='has-sub'><a href='games1.html'><span>Games 1</span></a>
+
+                    </li>
+                    <li class='has-sub'><a href='games2.html'><span>Games 2</span></a>
                     </li>
                 </ul>
             </li>
         </ul>
     </div>
-        <div class="bodySection">
-            <p id="title">Political Government and Philosophy Class</p>
-            <hr align="center" width="75%">
-            <script src="js/getName.js"></script>
+		<div class="bodySection">
+        <p id="title">Web Design Projects</p>
+        <script src="js/getName.js"></script>
 
-    <div class="lockSlide">
-        <p id="content">Here is a group presentation that me and group members made while in the class in 12th grade.</p>
-        <iframe src="https://docs.google.com/presentation/d/1pQrDDHbdubRN8jdCiGbOdDT8REptwKfEEc0Qi1RO5qs/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-    </div>
+        <p id="content">Some projects</p>
     </div>
     <!--<button id="contactToggle" class="contactButton">Contact Me</button>
 	    <div class="contact">
