--- a/music2.html
+++ b/music2.html
@@ -21,64 +21,64 @@
             </li>
             <li class='active has-sub'><a href='#'>School Courses</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.</span></a>
+                    <li class='has-sub'><a href='school1.html'><span>Web Design</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='webDsng.html'><span>Web Design</span></a>
+                    <li class='has-sub'><a href='school2.html'><span>Political Gov</span></a>
                     </li>
                 </ul>
             </li>
-            <li class='active has-sub'><a href='#'>School Courses2</span></a>
+            <li class='active has-sub'><a href='#'>School Courses 2</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.3</span></a>
+                    <li class='has-sub'><a href='school3.html'><span>Course 3</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 4</span></a>
+                    <li class='has-sub'><a href='school4'><span>Course 4</span></a>
                     </li>
                 </ul>
             </li>
             <li class='active has-sub'><a href='#'>Music</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov5</span></a>
+                    <li class='has-sub'><a href='music1.html'><span>Music 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 6</span></a>
+                    <li class='has-sub'><a href='music2.html'><span>Music 2</span></a>
                     </li>
                 </ul>
             </li>
             <li class='active has-sub'><a href='#'>Movies</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.7</span></a>
+                    <li class='has-sub'><a href='movies1.html'><span>Movies 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 8</span></a>
+                    <li class='has-sub'><a href='movies1.html'><span>Movies 2</span></a>
                     </li>
                 </ul>
             </li>
             <li class='active has-sub'><a href='#'>Books</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.9</span></a>
+                    <li class='has-sub'><a href='books1.html'><span>Books 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 10</span></a>
+                    <li class='has-sub'><a href='books2.html'><span>Books 2</span></a>
                     </li>
                 </ul>
             </li>
 			<li class='active has-sub'><a href='#'>Television Shows</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.9</span></a>
+                    <li class='has-sub'><a href='tv1.html'><span>Television Show 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 10</span></a>
+                    <li class='has-sub'><a href='tv2.html'><span>Television Show 2</span></a>
                     </li>
                 </ul>
             </li>
 			<li class='active has-sub'><a href='#'>All Games</span></a>
                 <ul>
-                    <li class='has-sub'><a href='history.html'><span>Political Gov.9</span></a>
+                    <li class='has-sub'><a href='games1.html'><span>Games 1</span></a>
 
                     </li>
-                    <li class='has-sub'><a href='#'><span>Course 10</span></a>
+                    <li class='has-sub'><a href='games2.html'><span>Games 2</span></a>
                     </li>
                 </ul>
             </li>
@@ -86,6 +86,7 @@
     </div>
 		<div class="bodySection">
         <p id="title">About This Website</p>
+		<hr>
         <script src="js/getName.js"></script>
 
         <p id="content">You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</p>
