--- a/contact.html
+++ b/contact.html
@@ -9,31 +9,25 @@
 
 <body>
     <!--Drop Down Menu-->
-
     <div class="header">
 	    <div id="headerImage">
-        <img src="images/Epcot_Page_Banner.jpg">
+        <img src="images/headerImage.jpg">
+		<p>Contact Me</p>
     </div>
 	</div>
     <div id='cssmenu'>
         <ul>
-            <li><a href="index.html"><span>Home</span></a>
+            <li id="no-sub"><a href="index.html"><span>Home</span></a>
             </li>
             <li class='active has-sub'><a href='#'>School Courses</span></a>
                 <ul>
                     <li class='has-sub'><a href='school1.html'><span>Web Design</span></a>
-
                     </li>
                     <li class='has-sub'><a href='school2.html'><span>Political Gov</span></a>
                     </li>
-                </ul>
-            </li>
-            <li class='active has-sub'><a href='#'>School Courses 2</span></a>
-                <ul>
                     <li class='has-sub'><a href='school3.html'><span>Course 3</span></a>
-
                     </li>
-                    <li class='has-sub'><a href='school4'><span>Course 4</span></a>
+                    <li class='has-sub'><a href='school4.html'><span>Course 4</span></a>
                     </li>
                 </ul>
             </li>
@@ -73,23 +67,25 @@
                     </li>
                 </ul>
             </li>
-			<li class='active has-sub'><a href='#'>All Games</span></a>
-                <ul>
-                    <li class='has-sub'><a href='games1.html'><span>Games 1</span></a>
-
-                    </li>
-                    <li class='has-sub'><a href='games2.html'><span>Games 2</span></a>
-                    </li>
-                </ul>
+            <li id="no-sub"><a href="games.html"><span>Games</span></a>
+            </li>
+            <li id="no-sub"><a href="contact.html"><span>Contact Me</span></a>
             </li>
         </ul>
     </div>
 		<div class="bodySection">
-        <p id="title">About This Website</p>
+        <p id="title">How to Contact Me</p>
 		<hr>
         <script src="js/getName.js"></script>
 
-        <p id="content">You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</p>
+        <p id="content">I can be contacted at: dmuller116@gmail.com</p>
+		<ul>
+			<li>Something</li>
+				<ol>
+					<li>Something</li>
+				</ol>
+			<li>asd</li>
+		</ul>
     </div>
     <!--<button id="contactToggle" class="contactButton">Contact Me</button>
 	    <div class="contact">
