Added other pages, header and footer changes
Added other pages, header and footer changes

--- a/movies1.html
+++ b/movies1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Political Gov | Homepage of David Muller</title>
+    <title>Favorite Movies | Homepage of David Muller</title>
     <link rel="website icon" href="images/icon.ico">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
@@ -12,7 +12,7 @@
     <div class="header">
         <div id="headerImage">
             <img src="images/headerImage.jpg">
-            <p>Political Gov</p>
+            <p>My Favorite Movies</p>
         </div>
     </div>
     <div id='cssmenu'>
@@ -69,25 +69,12 @@
         </ul>
     </div>
     <div class="bodySection">
-        <p id="title">Political Government and Philosophy Class</p>
-        <hr align="center" width="75%">
+        <p id="title">The Dark Night</p>
+		<p id="content">Directed By: Christopher Nolan</p>
+        <hr>
         <script src="js/getName.js"></script>
 
-        <div class="lockSlide">
-            <p id="content">Here is a group presentation that me and group members made while in the class in 12th grade.</p>
-            <iframe src="https://docs.google.com/presentation/d/1pQrDDHbdubRN8jdCiGbOdDT8REptwKfEEc0Qi1RO5qs/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-        </div>
-    </div>
-	
-	    <div class="bodySection2">
-        <p id="title">Political Government and Philosophy Class</p>
-        <hr align="center" width="75%">
-        <script src="js/getName.js"></script>
-
-        <div class="publicEssay">
-            <p id="content">Here is a group presentation that me and group members made while in the class in 12th grade.</p>
-            <iframe src="https://docs.google.com/document/d/16Jixty55gEKDcVyIz97qnY3m-KjDF5KyKzeyaWV9j94/pub?embedded=true"></iframe>
-        </div>
+        <p id="content">You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</p>
     </div>
 
     <div class="footer">
@@ -98,3 +85,27 @@
 </body>
 
 </html>
+
+
+<!--<button id="contactToggle" class="contactButton">Contact Me</button>
+	    <div class="contact">
+        <form action="" method="POST" enctype="multipart/form-data">
+            <input name="action" value="submit" type="hidden">
+            <h1 align="center">Contact Me:</h1>
+            <br>
+            <p>Your name:</p>
+            <input name="name" size="30" type="text">
+            <br>
+            <br>
+            <p>Your email:</p>
+            <input name="email" size="30" type="text">
+            <br>
+            <br>
+            <p>Your message:</p>
+            <textarea name="message" rows="7" cols="30">
+            </textarea>
+            <br>
+            <br>
+            <input value="Send email" type="submit">
+        </form>
+    </div>-->
