--- a/school3.html
+++ b/school3.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Political Gov | Homepage of David Muller</title>
-    <link rel="website icon" href="images/icon.ico">
+    <link rel="website icon" href="images/icon.ico">-->
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -12,7 +11,7 @@
     <div class="header">
         <div id="headerImage">
             <img src="images/headerImage.jpg">
-            <p>Political Gov</p>
+            <p>Advanced Computer Programming</p>
         </div>
     </div>
     <div id='cssmenu'>
@@ -80,7 +79,7 @@
     </div>
 	
 	    <div class="bodySection2">
-        <p id="title">Political Government and Philosophy Class</p>
+        <p id="title">Advanced Computer Programming</p>
         <hr align="center" width="75%">
         <script src="js/getName.js"></script>
 
