--- a/tv3.html
+++ b/tv3.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Political Gov | Homepage of David Muller</title>
-    <link rel="website icon" href="images/icon.ico">
+    <title>Contact Me | Homepage of David Muller</title>
+   <link rel="website icon" href="images/icon.ico">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -12,7 +12,7 @@
     <div class="header">
         <div id="headerImage">
             <img src="images/headerImage.jpg">
-            <p>Political Gov</p>
+            <p>Contact Me</p>
         </div>
     </div>
     <div id='cssmenu'>
@@ -69,27 +69,10 @@
         </ul>
     </div>
     <div class="bodySection">
-        <p id="title">Political Government and Philosophy Class</p>
-        <hr align="center" width="75%">
+        <p id="title">How to Contact Me</p>
+        <hr>
         <script src="js/getName.js"></script>
-
-        <div class="lockSlide">
-            <p id="content">Here is a group presentation that me and group members made while in the class in 12th grade.</p>
-            <iframe src="https://docs.google.com/presentation/d/1pQrDDHbdubRN8jdCiGbOdDT8REptwKfEEc0Qi1RO5qs/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-        </div>
     </div>
-	
-	    <div class="bodySection2">
-        <p id="title">Political Government and Philosophy Class</p>
-        <hr align="center" width="75%">
-        <script src="js/getName.js"></script>
-
-        <div class="publicEssay">
-            <p id="content">Here is a group presentation that me and group members made while in the class in 12th grade.</p>
-            <iframe src="https://docs.google.com/document/d/16Jixty55gEKDcVyIz97qnY3m-KjDF5KyKzeyaWV9j94/pub?embedded=true"></iframe>
-        </div>
-    </div>
-
     <div class="footer">
         <p>Contact Me: example@gmail.com</p>
     </div>
