--- a/music2.html
+++ b/music2.html
@@ -2,20 +2,22 @@
 <html>
 
 <head>
-    <title>David Muller | Homepage of David Muller</title>
-    <!--<link rel="website icon" href="images/icon.ico">-->
+    <title>Favorite Music Bands | Homepage of David Muller</title>
+    <link rel="website icon" href="images/icon.ico">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
     <!--Drop Down Menu-->
     <div class="header">
-	    <div id="headerImage">
-        <img src="images/headerImage.jpg">
-		<p>Contact Me</p>
+        <div id="headerImage">
+            <img src="images/headerImage.jpg">
+            <p>Phoenix</p>
+        </div>
     </div>
-	</div>
     <div id='cssmenu'>
+			<div class="menuBackground">
+		</div>
         <ul>
             <li id="no-sub"><a href="index.html"><span>Home</span></a>
             </li>
@@ -25,69 +27,59 @@
                     </li>
                     <li class='has-sub'><a href='school2.html'><span>Political Gov</span></a>
                     </li>
-                    <li class='has-sub'><a href='school3.html'><span>Course 3</span></a>
+                    <li class='has-sub'><a href='school3.html'><span>Advanced Computer Programming</span></a>
                     </li>
-                    <li class='has-sub'><a href='school4.html'><span>Course 4</span></a>
+                    <li class='has-sub'><a href='school4.html'><span>Computer Lab</span></a>
                     </li>
                 </ul>
             </li>
             <li class='active has-sub'><a href='#'>Music</span></a>
                 <ul>
-                    <li class='has-sub'><a href='music1.html'><span>Music 1</span></a>
-
+                    <li class='has-sub'><a href='music1.html'><span>Daft Punk</span></a>
                     </li>
-                    <li class='has-sub'><a href='music2.html'><span>Music 2</span></a>
+                    <li class='has-sub'><a href='music2.html'><span>Phoenix</span></a>
                     </li>
                 </ul>
             </li>
             <li class='active has-sub'><a href='#'>Movies</span></a>
                 <ul>
-                    <li class='has-sub'><a href='movies1.html'><span>Movies 1</span></a>
-
+                    <li class='has-sub'><a href='movies1.html'><span>The Dark Night</span></a>
                     </li>
-                    <li class='has-sub'><a href='movies1.html'><span>Movies 2</span></a>
+                    <li class='has-sub'><a href='movies2.html'><span>Star Wars</span></a>
                     </li>
                 </ul>
             </li>
             <li class='active has-sub'><a href='#'>Books</span></a>
                 <ul>
-                    <li class='has-sub'><a href='books1.html'><span>Books 1</span></a>
-
+                    <li class='has-sub'><a href='books1.html'><span>Fast Food Nation</span></a>
                     </li>
-                    <li class='has-sub'><a href='books2.html'><span>Books 2</span></a>
+                    <li class='has-sub'><a href='books2.html'><span>The City of Ember</span></a>
                     </li>
                 </ul>
             </li>
-			<li class='active has-sub'><a href='#'>Television Shows</span></a>
+            <li class='active has-sub'><a href='#'>Television Shows</span></a>
                 <ul>
-                    <li class='has-sub'><a href='tv1.html'><span>Television Show 1</span></a>
-
+                    <li class='has-sub'><a href='tv1.html'><span>Rick and Morty</span></a>
                     </li>
-                    <li class='has-sub'><a href='tv2.html'><span>Television Show 2</span></a>
+                    <li class='has-sub'><a href='tv2.html'><span>Community</span></a>
+                    </li>
+                    <li class='has-sub'><a href='tv3.html'><span>Arrested Development</span></a>
                     </li>
                 </ul>
-            </li>
-            <li id="no-sub"><a href="games.html"><span>Games</span></a>
-            </li>
-            <li id="no-sub"><a href="contact.html"><span>Contact Me</span></a>
-            </li>
         </ul>
     </div>
-		<div class="bodySection">
-        <p id="title">How to Contact Me</p>
-		<hr>
-        <script src="js/getName.js"></script>
 
-        <p id="content">I can be contacted at: dmuller116@gmail.com</p>
-		<ul>
-			<li>Something</li>
-				<ol>
-					<li>Something</li>
-				</ol>
-			<li>asd</li>
-		</ul>
+    <div class="footer">
+        <p>Contact Me: example@gmail.com</p>
     </div>
-    <!--<button id="contactToggle" class="contactButton">Contact Me</button>
+    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/pageLoadAnim.js"></script>
+</body>
+
+</html>
+
+
+<!--<button id="contactToggle" class="contactButton">Contact Me</button>
 	    <div class="contact">
         <form action="" method="POST" enctype="multipart/form-data">
             <input name="action" value="submit" type="hidden">
@@ -109,10 +101,3 @@
             <input value="Send email" type="submit">
         </form>
     </div>-->
-    <div class="footer">
-    </div>
-    <script src="js/jquery-1.11.3.js"></script>
-    <script src="js/pageLoadAnim.js"></script>
-</body>
-
-</html>
